# password_compat-python

./: .gitignore  Pipfile  password_compat.py  pyproject.toml
.github/workflows/: functiontest-old-php.yml  functiontest.yml  python.yml  unittest.yml
old-php/: password_hash.php  password_verify.php  test_compare_old_php.py
php/: password_hash.php  password_verify.php  test_compare_php.py
tests/: test_password_compat.py
