[tool.poetry]
name = "password_compat"
version = "0.1.0"
description = ""
authors = ["masinc <masinc000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
bcrypt = "^3.2.0"
mypy = "^0.902"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
